@@ -2,7 +2,9 @@ Revision history for XML-Grammar-Fiction.
 
     * Update the glob in inc/Test/Run/Builder.pm .
         - include t/screenplay/*.t and t/fiction/*.t .
-    * Refactoring: _data_dir now initialized from default => sub { ... }.
+    * lib/XML/Grammar/FictionBase/XSLT/Converter.pm
+        - Refactoring: _data_dir now initialized from default => sub { ... }.
+        - Refactoring: _rng now initialized from default => sub { ... }.
 
 0.12.5      Sat 27 Apr 14:25:15 IDT 2013
     * Do not try to compile scripts/bump-version-number.pl .
